# Soar

./: CMakeLists.txt
Core/: CMakeLists.txt
IDE Projects/include/: ElementXMLHandle.h
SoarCLI/: CMakeLists.txt
